--- a/role_docker_jenkins.yaml
+++ b/role_docker_jenkins.yaml
@@ -3,5 +3,4 @@
   hosts: localhost
   become: true
   roles:
-    - geerlingguy.docker
-    - geerlingguy.jenkins
+    - iam-surya369.java-jenkins-docker
