--- a/role_docker_jenkins.yaml
+++ b/role_docker_jenkins.yaml
@@ -3,4 +3,5 @@
   hosts: localhost
   become: true
   roles:
-    - iam-surya369.java-jenkins-docker
+    - geerlingguy.docker
+    - kharea970.jenkins
